# git-size-history

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md  sentinel.md
src/: main.rs
