[package]
name = "git-size-history"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Gautier Portet <gautier@soundconverter.org>"]
description = "Fast git repository size-over-time analysis using commit sampling"
license = "MIT"
readme = "README.md"
repository = "https://github.com/example/git-size-history"
keywords = ["git", "repository", "size", "analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
git2 = "0.20"
indicatif = "0.18"
plotters = "0.3"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
